scss/_items.scss
/* ... */
// Handle text overflow
.item,
.item h1,
.item h2,
.item h3,
.item h4,
.item h5,
.item h6,
.item p,
.item-content,
.item-content h1,
.item-content h2,
.item-content h3,
.item-content h4,
.item-content h5,
.item-content h6,
.item-content p {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

// Linked list items
a.item {
  color: inherit;
  text-decoration: none;

  &:hover,
  &:focus {
    text-decoration: none;
  }
}


/**
 * Complex Items
 * --------------------------------------------------
 * Adding .item-complex allows the .item to be slidable and
 * have options underneath the button, but also requires an
 * additional .item-content element inside .item.
 * Basically .item-complex removes any default settings which
 * .item added, so that .item-content looks them as just .item.
 */

.item-complex,
a.item.item-complex,
button.item.item-complex {
  padding: 0;
}
.item-complex .item-content,
.item-radio .item-content {
  position: relative;
  z-index: $z-index-item;
  padding: $item-padding (($item-padding * 3) - 5) $item-padding $item-padding;
  border: none;
  background-color: white;
}

a.item-content {
  display: block;
  color: inherit;
  text-decoration: none;
}

.item-text-wrap .item,
.item-text-wrap,
.item-text-wrap h1,
.item-text-wrap h2,
.item-text-wrap h3,
.item-text-wrap h4,
.item-text-wrap h5,
.item-text-wrap h6,
.item-text-wrap p,
.item-complex.item-text-wrap .item-content,
.item-body h1,
.item-body h2,
.item-body h3,
.item-body h4,
.item-body h5,
.item-body h6,
.item-body p {
  overflow: hidden;
  white-space: normal;
}
.item-complex.item-text-wrap,
.item-complex.item-text-wrap h1,
.item-complex.item-text-wrap h2,
.item-complex.item-text-wrap h3,
.item-complex.item-text-wrap h4,
.item-complex.item-text-wrap h5,
.item-complex.item-text-wrap h6,
.item-complex.item-text-wrap p {
  overflow: hidden;
  white-space: nowrap;
}


/**
 * Item Icons
 * --------------------------------------------------
 */

.item-icon-left .icon,
.item-icon-right .icon {
  @include display-flex();
  @include align-items(center);
  position: absolute;
  top: 0;
  height: 100%;
  font-size: $item-icon-font-size;

  &:before {
    display: block;
    width: $item-icon-font-size;
    text-align: center;
  }
}

.item .fill-icon {
  min-width: $item-icon-fill-font-size + 2;
  min-height: $item-icon-fill-font-size + 2;
  font-size: $item-icon-fill-font-size;
}

.item-icon-left {
  padding-left: ($item-padding * 3);

  .icon {
    left: $item-padding / 2;
  }
}
.item-complex.item-icon-left {
  padding-left: 0;

  .item-content {
    padding-left: ($item-padding * 3);
  }
}

.item-icon-right {
  padding-right: ($item-padding * 3);

  .icon {
    right: $item-padding / 2;
  }
}
.item-complex.item-icon-right {
  padding-right: 0;

  .item-content {
    padding-right: ($item-padding * 3);
  }
}

.item-icon-left.item-icon-right .icon:first-child {
  right: auto;
}
.item-icon-left.item-icon-right .icon:last-child {
  left: auto;
}


/**
 * Item Button
 * --------------------------------------------------
 * An item button is a child button inside an .item (not the entire .item)
 */

.item-button-left {
  padding-left: $item-padding * 4.5;
}

.item-button-left > .button,
.item-button-left .item-content > .button {
  @include display-flex();
  @include align-items(center);
  position: absolute;
  top: $item-padding / 2;
  left: $item-padding / 2;
  min-width: $item-icon-font-size + ($button-border-width * 2);
  min-height: $item-icon-font-size + ($button-border-width * 2);
  font-size: $item-button-font-size;
  line-height: $item-button-line-height;

  .icon:before {
    position: relative;
    left: auto;
    width: auto;
    line-height: $item-icon-font-size - 1;
  }

  > .button {
    margin: 0px 2px;
    min-height: $item-icon-font-size + ($button-border-width * 2);
    font-size: $item-button-font-size;
    line-height: $item-button-line-height;
  }
}

.item-button-right,
a.item.item-button-right,
button.item.item-button-right {
  padding-right: $item-padding * 5;
}

.item-button-right > .button,
.item-button-right .item-content > .button,
.item-button-right > .buttons,
.item-button-right .item-content > .buttons {
  @include display-flex();
  @include align-items(center);
  position: absolute;
  top: $item-padding / 2;
  right: $item-padding;
  min-width: $item-icon-font-size + ($button-border-width * 2);
  min-height: $item-icon-font-size + ($button-border-width * 2);
  font-size: $item-button-font-size;
  line-height: $item-button-line-height;

  .icon:before {
    position: relative;
    left: auto;
    width: auto;
    line-height: $item-icon-font-size - 1;
  }

  > .button {
    margin: 0px 2px;
    min-width: $item-icon-font-size + ($button-border-width * 2);
    min-height: $item-icon-font-size + ($button-border-width * 2);
    font-size: $item-button-font-size;
    line-height: $item-button-line-height;
  }
}


/**
 * Auto Right Arrow Icon
 * --------------------------------------------------
 * By default, if an .item is created out of an <a> or <button>
 * then a arrow will be added to the right side of the item.
 */

a.item,
button.item,
.item[href] .item-content,
.item[ng-click] .item-content {
  padding-right: (($item-padding * 3) - 5);

  &:after {
    // By default, both <a> and <button> have right side arrow icons
    @include display-flex();
    @include align-items(center);
    @include font-smoothing(antialiased);
    position: absolute;
    top: 0;
    right: $item-padding - 4;
    height: 100%;
    color: #ccc;
    content: "\f125"; // ion-chevron-right
    text-transform: none;
    font-weight: normal;
    font-style: normal;
    font-variant: normal;
    font-size: 16px;
    font-family: 'Ionicons';
    line-height: 1;
    speak: none;
  }
}
/* ... */

